--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -7,23 +7,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="Orlson Aine Joseph">
 
-    <title> Keep | {% block title %} {% endblock %} </title>
-    <!-- <link href="{% static 'nodraft/img/logo/nodraft-feather-250-transparent.png' %}" rel="icon" type="image/x-icon"> -->
+    <title> Nodraft | {% block title %} {% endblock %} </title>
+    <link href="{% static 'archangel/img/logo/favicon.png' %}" rel="icon" type="image/x-icon">
+
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Core CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
     <link href="{% static 'archangel/css/base.css' %}" rel="stylesheet">
     {% block head %} {% endblock %}
 </head>
 
-<body>
+<body id="page-top">
     {% block navigation %} {% endblock %}
 
     {% block master %}
@@ -41,9 +44,9 @@
         crossorigin="anonymous"></script>
 
     <!-- Bootstrap JS -->
-    <script async defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" />
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 
     {% block script %} {% endblock %}
 </body>
