--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -8,60 +8,13 @@
 {% endblock %}
 
 {% block navigation %}
-<nav class="navbar navbar-expand-md navbar-light fixed-top shadow-sm" id="mainNav">
-    <div class="container px-5">
-        <a class="navbar-brand fw-bold" href="#page-top">Keep</a>
+<a href="{% url 'core:login' %}">Login</a>
 
-        <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <i class="fa fa-bars fa-fw"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0 w-sm-50">
-                <li class="nav-item">
-                    <a class="nav-link me-lg-3" href="#">Login</a>
-                </li>
-            </ul>
-
-            <a class="btn btn-outline-primary px-3 mb-2 mb-lg-0 shadow-none" href="#">
-                <span class="d-flex align-items-center">
-                    <span class="small">Get Keep</span>
-                    <i class="fa fa-caret-right ms-3"></i>
-                </span>
-            </a>
-        </div>
-    </div>
-</nav>
 {% endblock %}
 
 {% block master %}
 <!-- Masthead -->
-<header class="masthead" id="page-top">
-    <div class="container px-4 px-lg-5 h-100">
-        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-            <div class="col-lg-8 align-self-end">
-                <h1 class="text-white font-weight-bold">The ideal tool to supercharge your chrome experience</h1>
-                <hr class="divider divider-light">
-            </div>
-            <div class="col-lg-8 align-self-baseline">
-                <a class="btn btn-outline-primary btn-xl" href="#">
-                    Get Started
-                </a>
-            </div>
-        </div>
-    </div>
-</header>
 
-<!-- Footer -->
-<footer class="bg-light py-5">
-    <div class="container px-4 px-lg-5">
-        <div class="small text-center text-muted">
-            Copyright &copy; {% now "Y" %} - Keep
-        </div>
-    </div>
-</footer>
 {% endblock %}
 
 {% block script %}
