--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -40,11 +40,11 @@
     {% endblock %}
 
     <!-- jQuery -->
-    <script async defer src="https://code.jquery.com/jquery-3.6.0.min.js" id="jQueryLoad"
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" id="jQueryLoad"
         crossorigin="anonymous"></script>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    <script async defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 
