--- a/core/templates/connect.html
+++ b/core/templates/connect.html
@@ -4,7 +4,7 @@
 {% block title %} Connect {% endblock %}
 
 {% block head %}
-<link href="{% static 'core/css/connect.css' %}" rel="stylesheet">
+<link href="{% static 'core/css/connect.css' %}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block navigation %}
