--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -3,52 +3,62 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1,
+            shrink-to-fit=no" />
 
-    <title> Nodraft | {% block title %} {% endblock %} </title>
-    <link href="{% static 'archangel/img/logo/favicon.png' %}" rel="icon" type="image/x-icon">
+        <title> Nodraft | {% block title %} {% endblock %} </title>
+        <link href="{% static 'archangel/img/logo/favicon.png' %}" rel="icon"
+            type="image/x-icon" />
 
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,700"
+            rel="stylesheet" type="text/css" />
 
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+        <!-- Bootstrap Icons -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+            rel="stylesheet" />
 
-    <!-- Core CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <!-- Core CSS Bootstrap -->
+        {% block bootstrap %}
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.0/dist/sandstone/bootstrap.min.css"
+            rel="stylesheet" type="text/css" />
+        {% endblock %}
 
-    <link href="{% static 'archangel/css/base.css' %}" rel="stylesheet">
-    {% block head %} {% endblock %}
-</head>
+        <link href="{% static 'archangel/css/base.css' %}" rel="stylesheet"
+            type="text/css" />
+        {% block head %} {% endblock %}
+    </head>
 
-<body id="page-top">
-    {% block navigation %} {% endblock %}
+    <body id="page-top">
+        {% block navigation %} {% endblock %}
 
-    {% block master %}
-    <main class="container-fluid" role="main">
-        <!-- TODO server messages -->
+        {% block master %}
+        <main class="container-fluid" role="main">
+            <!-- TODO server messages -->
 
-        {% block content %} {% endblock %}
+            {% block content %} {% endblock %}
 
-        {% block footer %} {% endblock %}
-    </main>
-    {% endblock %}
+            {% block footer %} {% endblock %}
+        </main>
+        {% endblock %}
 
-    <!-- jQuery -->
-    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" id="jQueryLoad"
-        crossorigin="anonymous"></script>
+        <!-- jQuery -->
+        <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
+            id="jQueryLoad"
+            crossorigin="anonymous"></script>
 
-    <!-- Bootstrap JS -->
-    <script async defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap JS -->
+        <script async defer
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+            crossorigin="anonymous"></script>
 
-    {% block script %} {% endblock %}
-</body>
+        {% block script %} {% endblock %}
+    </body>
 
 </html>
