--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -4,7 +4,7 @@
 {% block title %} Login {% endblock %}
 
 {% block head %}
-<link href="{% static 'core/css/login.css' %}" rel="stylesheet">
+<link href="{% static 'core/css/login.css' %}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block navigation %}
