--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,46 +1,77 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Login {% endblock %}
+{% block title %} Log in {% endblock %}
 
 {% block head %}
-<link href="{% static 'core/css/login.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'core/css/login.css' %}" rel="stylesheet">
 {% endblock %}
 
-{% block navigation %}
+{% block content %}
+<section class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-7 col-lg-5">
+            <div class="wrap">
+                <div class="img" style="background-image:
+                    url('https://picsum.photos/id/366/500/');"></div>
 
-{% endblock %}
+                <div class="d-flex px-4 py-3">
+                    <div class="w-100">
+                        <h3 class="mb-4">Log in</h3>
+                    </div>
 
-{% block master %}
-{{ form.errors }}
-<form action="{% url 'core:login' %}" method="post">
-    {% csrf_token %}
-    <tr>
-        <th><label for="id_email">Email address:</label></th>
-        <td>
+                    <div class="w-100">
+                        <p class="social-media d-flex justify-content-end">
+                            <a class="social-icon d-flex align-items-center
+                                justify-content-center" href="#">
+                                <i class="bi bi-google"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
 
-            <input type="email" name="email" autofocus autocapitalize="none" autocomplete="email" maxlength="254"
-                required id="id_email">
+                <form class="px-4 py-0" action="{% url 'core:login' %}"
+                    method="POST"> {% csrf_token %}
+                    <div class="form-group">
+                        <input class="form-control" id="email" type="email"
+                            name="email" required>
+                        <label class="form-control-placeholder" for="email">E-mail</label>
+                    </div>
 
+                    <div class="form-group">
+                        <input class="form-control" id="password-field"
+                            type="password" name="password" required>
+                        <label class="form-control-placeholder"
+                            for="password-field">Password</label>
 
-        </td>
-    </tr>
+                        <span class="fa fa-fw fa-eye field-icon toggle-password"
+                            toggle="#password-field"></span>
+                    </div>
 
-    <tr>
-        <th><label for="id_password">Password:</label></th>
-        <td>
+                    <div class="form-group">
+                        <button class="form-control btn btn-primary
+                            submit px-2" type="submit">
+                            Log In
+                        </button>
+                    </div>
 
-            <input type="password" name="password" autocomplete="current-password" required id="id_password">
+                    <div class="form-group d-flex">
+                        <div class="w-50 text-md-left text-center">
+                            <a href="{% url 'core:register' %}">Create an
+                                account</a>
+                        </div>
 
-
-
-        </td>
-    </tr>
-
-    <input type="submit" value="Submit">
-</form>
+                        <div class="w-50 text-md-right text-center">
+                            <a href="#">Forgot Password ?</a>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
 
 {% block script %}
 <script defer src="{% static 'core/js/login.js' %}"></script>
-{% endblock%}
+{% endblock %}
