--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -22,10 +22,10 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
             rel="stylesheet" />
 
-        <!-- Core CSS Bootstrap -->
+        <!-- Themed CSS Bootstrap -->
         {% block bootstrap %}
         <link
-            href="https://cdn.jsdelivr.net/npm/bootswatch@5.2.0/dist/sandstone/bootstrap.min.css"
+            href="{% static 'archangel/css/bootstrap/bootstrap.min.css' %}"
             rel="stylesheet" type="text/css" />
         {% endblock %}
 
@@ -53,7 +53,7 @@
             crossorigin="anonymous"></script>
 
         <!-- Bootstrap JS -->
-        <script async defer
+        <script defer
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
