--- a/archangel/static/archangel/css/base.css
+++ b/archangel/static/archangel/css/base.css
@@ -2,6 +2,8 @@
     border-radius: 0 !important;
 
     font-family: "Raleway", sans-serif !important;
+    --gray-mid: #bbb;
+    --gray-light: #eee;
 }
 
 html,
@@ -12,4 +14,8 @@ body {
 
 a {
     font-size: 15px;
+}
+
+input.form-control {
+    font-family: Roboto, sans-serif !important;
 }
