--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -17,6 +17,10 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700"
             rel="stylesheet" type="text/css" />
 
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+            rel="stylesheet" type="text/css" />
+
         <!-- Bootstrap Icons -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
@@ -38,7 +42,7 @@
         {% block navigation %} {% endblock %}
 
         {% block master %}
-        <main class="container-fluid" role="main">
+        <main class="container" role="main">
             <!-- TODO server messages -->
 
             {% block content %} {% endblock %}
@@ -49,7 +53,6 @@
 
         <!-- jQuery -->
         <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
-            id="jQueryLoad"
             crossorigin="anonymous"></script>
 
         <!-- Bootstrap JS -->
