--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block navigation %}
-{% include 'include/navigation.html' %}
+{% include 'include/core/navigation.html' %}
 {% endblock %}
 
 {% block master %}
@@ -27,10 +27,10 @@
                 <h4 class="text-white-75 mb-5">
                     Dynamic. Intuitive. Visual.
                 </h4>
-                <a class="btn btn-primary btn-xl" href="{% url 'core:register'
-                    %}">Get started</a>
-                <a class="btn btn-light btn-xl" href="#about">Download
-                    extension</a>
+                <a href="{% url 'core:register' %}"
+                    class="btn btn-primary btn-xl">Get started</a>
+                <a href="#about" class="btn btn-light btn-xl">
+                    Download extension</a>
             </div>
         </div>
     </div>
