--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -21,10 +21,14 @@
             href="https://fonts.googleapis.com/css?family=Roboto:400,700"
             rel="stylesheet" type="text/css" />
 
-        <!-- Bootstrap Icons -->
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-            rel="stylesheet" />
+            href="https://fonts.googleapis.com/css?family=Nunito:400,700"
+            rel="stylesheet" type="text/css" />
+
+        <!-- Bootstrap Icons -->
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+            />
 
         <!-- Themed CSS Bootstrap -->
         {% block bootstrap %}
@@ -58,8 +62,8 @@
         <!-- Bootstrap JS -->
         <script defer
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
+
 
         {% block script %} {% endblock %}
     </body>
