--- a/view/templates/include/content/tabs_navigation.html
+++ b/view/templates/include/content/tabs_navigation.html
@@ -2,19 +2,18 @@
     <div class="col-12">
         <ul class="nav nav-tabs nav-fill my-2">
             <li class="nav-item">
-                <a href="{% url 'view:favorites' %}" class="nav-link">
-                    Favorites</a>
-            </li>
-            <li class="nav-item">
-                <a href="{% url 'view:bookmarks' %}" class="nav-link">
+                <a href="{% url 'view:bookmarks' %}" class="nav-link
+                    nodraft-dynamic">
                     Bookmarks</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'view:collections' %}" class="nav-link">
-                    Collections</a>
+                <a href="{% url 'view:favorites' %}" class="nav-link
+                    nodraft-dynamic">
+                    Favorites</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'view:archive' %}" class="nav-link">
+                <a href="{% url 'view:archive' %}" class="nav-link
+                    nodraft-dynamic">
                     Archive</a>
             </li>
         </ul>
