--- a/view/templates/include/components/bookmark.html
+++ b/view/templates/include/components/bookmark.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="col-lg-6 col-3 m-0 p-1">
+<div class="col-md-6 col-12 m-0 p-1">
     <div class="media pl-2 py-2">
 
         <div class="media-body">
@@ -12,13 +12,16 @@
                 {% lorem 15 w %} <br>
                 <span class="text-muted">
                     toptal.com ・ {% now "jS F Y" %}
-                    ・ <i class="bi bi-star"></i>
-                    ・ <i class="bi bi-trash3"></i>
                 </span>
             </p>
 
+            <p class="media-footer m-0">
+                <span class="text-muted">
+                    Add to Favorites ・ Remove
+                </span>
+            </p>
         </div>
-        <img class="align-self-start mr-2" src="https://via.placeholder.com/35"
+        <img class="align-self-end mr-2" src="https://via.placeholder.com/48"
             alt="Card image"/>
 
     </div>
