--- a/view/static/view/css/library.css
+++ b/view/static/view/css/library.css
@@ -2,6 +2,10 @@
     border: 1px solid var(--gray-light);
 }
 
+.media:hover {
+    box-shadow: 0 0 6px var(--gray-light);
+}
+
 .media-body {
     font-size: 14px;
 }
@@ -9,6 +13,11 @@
 .media-body .text-muted {
     font-size: 12px;
 }
+
+.media-footer .text-muted {
+    font-size: 10px;
+}
+
 
 div.collections-buttons button.btn.btn-light {
     padding: 4px 8px;
