--- a/view/templates/include/content/tabs_navigation.html
+++ b/view/templates/include/content/tabs_navigation.html
@@ -2,9 +2,9 @@
     <div class="col-12">
         <ul class="nav nav-tabs nav-fill my-2">
             <li class="nav-item">
-                <a href="{% url 'view:bookmarks' %}" class="nav-link
+                <a href="{% url 'view:library' %}" class="nav-link
                     nodraft-dynamic">
-                    Bookmarks</a>
+                    Library</a>
             </li>
             <li class="nav-item">
                 <a href="{% url 'view:favorites' %}" class="nav-link
