--- a/view/templates/include/views/favorites.html
+++ b/view/templates/include/views/favorites.html
@@ -1,7 +1,9 @@
-<div class="col-12">
-    {% for bookmark in bookmarks %}
-    Hello
-    {% empty %}
-    {% include 'include/components/empty.html' with svg=svg message=message %}
-    {% endfor %}
+<div class="row">
+    <div class="col-12">
+        {% for bookmark in bookmarks %}
+        Hello
+        {% empty %}
+        {% include 'include/components/empty.html' with svg=svg message=message %}
+        {% endfor %}
+    </div>
 </div>
