--- a/view/templates/dashboard.html
+++ b/view/templates/dashboard.html
@@ -28,4 +28,8 @@
 
 {% block script %}
 <script defer src="{% static 'view/js/view.js' %}"></script>
+<script async src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+    integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
+    crossorigin="anonymous" async></script>
+
 {% endblock%}
