--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -14,16 +14,16 @@
             type="image/x-icon" />
 
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Raleway:400,700"
-            rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link
-            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
-            rel="stylesheet" type="text/css" />
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
+            rel="stylesheet">
 
         <link
-            href="https://fonts.googleapis.com/css?family=Nunito:400,700"
-            rel="stylesheet" type="text/css" />
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap"
+            rel="stylesheet">
 
         <!-- Bootstrap Icons -->
         <link rel="stylesheet"
@@ -33,7 +33,7 @@
         <!-- Themed CSS Bootstrap -->
         {% block bootstrap %}
         <link
-            href="{% static 'archangel/css/bootstrap/bootstrap.min.css' %}"
+            href="{% static 'archangel/css/bootstrap/bootstrap.css' %}"
             rel="stylesheet" type="text/css" />
         {% endblock %}
 
