--- a/view/static/view/css/library.css
+++ b/view/static/view/css/library.css
@@ -1,23 +1,32 @@
-.media {
-    border: 1px solid var(--gray-light);
+.card-columns {
+    column-count: 1;
+    column-gap: .5rem;
 }
 
-.media:hover {
-    box-shadow: 0 0 6px var(--gray-light);
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 2;
+    }
 }
 
-.media-body {
+.card:hover {
+    box-shadow: 0 0 2px var(--gray);
+}
+
+.card-body {
     font-size: 14px;
 }
 
-.media-body .text-muted {
+.card-body .text-muted {
     font-size: 12px;
 }
 
-.media-footer .text-muted {
-    font-size: 10px;
-}
+.card-body img {
+    position: absolute;
 
+    bottom: .5rem;
+    right: .5rem;
+}
 
 div.collections-buttons button.btn.btn-light {
     padding: 4px 8px;
@@ -27,6 +36,6 @@ div.collections-buttons button.btn.btn-light {
 }
 
 div.collections-buttons button.btn.btn-light.active {
-    background-color: var(--primary);
+    background-color: var(--success);
     color: var(--white);
 }
