--- a/view/templates/include/content/navigation.html
+++ b/view/templates/include/content/navigation.html
@@ -1,5 +1,5 @@
  <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light py-1"
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2"
     id="mainNav">
     <div class="container px-0">
         <a class="navbar-brand mb-0 h1" href="#page-top">Nodraft</a>
