--- a/view/templates/include/content/search_bar.html
+++ b/view/templates/include/content/search_bar.html
@@ -1,10 +1,10 @@
-<div class="row input-search-bar">
+<div class="row input-search-bar mt-3 mb-2">
     <div class="col-12">
-        <div class="input-group ms-auto my-2">
+        <div class="input-group ms-auto m-0">
             <input type="text" class="form-control input-search"
                 placeholder="Quickly search through bookmarks and collections">
             <span class="input-group-btn">
-                <button class="btn btn-search" type="button">
+                <button class="btn btn-search shadow-none" type="button">
                     <i class="bi bi-search"></i>
                 </button>
             </span>
