--- a/core/templates/connect.html
+++ b/core/templates/connect.html
@@ -20,6 +20,6 @@
 </form>
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
 <script defer src="{% static 'core/js/connect.js' %}"></script>
 {% endblock%}
