--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -43,6 +43,6 @@
 </footer>
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
 <script defer src="{% static 'core/js/landing.js' %}"></script>
 {% endblock%}
