--- a/archangel/templates/base.html
+++ b/archangel/templates/base.html
@@ -65,7 +65,7 @@
             crossorigin="anonymous"></script>
 
 
-        {% block script %} {% endblock %}
+        {% block scripts %} {% endblock %}
     </body>
 
 </html>
