--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -72,6 +72,6 @@
 </section>
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
 <script defer src="{% static 'core/js/login.js' %}"></script>
 {% endblock %}
