--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -70,6 +70,6 @@
 </section>
 {% endblock %}
 
-{% block script %}
+{% block scripts %}
 <script src="{% static 'core/js/login.js' %}"></script>
 {% endblock %}
