--- a/view/templates/include/views/favorites.html
+++ b/view/templates/include/views/favorites.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        {% for bookmark in bookmarks %}
+        {% for bookmark in bookmark_list %}
         Hello
         {% empty %}
         {% include 'include/components/empty.html' with svg=svg message=message %}
